# django-blog

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: db.sqlite3  manage.py
src/account/: admin.py  forms.py  models.py  urls.py  views.py
src/account/migrations/: 0001_initial.py
src/blog/: admin.py  api.py  forms.py  managers.py  models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
src/blog/templates/blog/: base.html
src/blog/templates/blog/post/: comment.html  detail.html  list.html  share.html
src/blog/templatetags/: markdown.py
src/django_blog/: api.py  settings.py  urls.py
src/templates/: base.html  nav.html
src/templates/account/: login.html  profile.html  signup.html
src/templates/blog/post/: comment.html  comment_form.html  detail.html  list.html  pagination.html  share.html
src/templates/registration/: logged_out.html
src/templatetags/: forms_tags.py
